# openmlsys-cuda

./: .gitmodules  CMakeLists.txt  README.md  fc_relu.cu  first_attempt.cu  gemm.cu  gemm_final.cu  gemm_hide_smem_latency.cu  gemm_naive.cu  gemm_transpose_smem.cu  gemm_use_128.cu  gemm_use_smem.cu  gemm_use_tile.cu  main.cu  util.cuh
